# microtorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: examples_repo.ipynb  microtorch_intro.ipynb
