[tool.poetry]
name = "microtorch"
version = "0.1.1"
description = ""
authors = ["mustafabozkaya <mustafaegebozkaya555@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
requests = "^2.31.0"
torch = "^2.0.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
